# time-tracker

./: CLAUDE.md  README.md  entitlements.plist  package-lock.json  package.json
.claude/docs/: architectural_patterns.md
.github/workflows/: rust.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  mod.rs  settings.rs  time_entry.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  models.rs
src-tauri/src/db/repositories/: error.rs  missed_prompt.rs  mod.rs  settings.rs  time_entry.rs
src-tauri/src/services/: idle_detector.rs  mod.rs  timer.rs
src/components/calendar/: CalendarView.tsx  DaySummary.tsx  DayTimeline.tsx  ExportButton.tsx  TimeSlotEditor.tsx
src/components/settings/: SettingsPanel.tsx
src/components/tracker/: CategorySelector.tsx  MissedPromptsPanel.tsx  PromptDialog.tsx
src/services/: api.ts
src/stores/: appStore.ts
src/types/: index.ts
